[tool.poetry]
name = "gph-site"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.4.1"
channels = "3.0.3"
channels-redis = "3.3.0"
django = "3.2.23"
django-cors-headers = "4.2.0"
django-impersonate = "1.7.3"
django-mathfilters = "1.0.0"
django-ratelimit = "3.0.1"
django-redis = "5.0.0"
gevent = "23.9.1"
greenlet = "3.0.0"
gunicorn = "20.1.0"
markdown = "3.3.4"
py-cord = "2.4.1"
requests = "2.31.0"
twisted = "23.10.0"
uvicorn = {version = "0.23.2", extras = ["standard"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
